--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,11 @@
 name: Docker Image CI
-
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches-ignore:
+      - 'main'
+    tags:
+      - "v*"
 
 jobs:
 
@@ -15,4 +16,4 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag wxwmatt/ubuntu-gear:0.1
+      run: docker build . --file Dockerfile --tag wxwmatt/ubuntu-gear:${{ github.ref_name }}
