--- a/Dockerfile-zsh
+++ b/Dockerfile-zsh
@@ -2,17 +2,18 @@ FROM ubuntu:latest
 
 RUN apt-get update && \
     apt-get install -y \
+	zsh \
     git \
     curl \
 	vim \
     iproute2 \
     iputils-ping \
     net-tools && \
-    useradd -m -s $(which bash) ubuntu && \
-    rm -rf /var/lib/apt/lists/*
+    useradd -m -s $(which zsh) ubuntu && \
+    rm -rf /var/lib/apt/lists/* 
 
 USER ubuntu
 
 RUN /bin/bash -c "$(curl -fsSL https://git.io/JDlEZ)"
 
-CMD ["bash"]
+CMD ["zsh"]
