--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile-zsh
+          file: ./Dockerfile.zsh
           platforms: linux/amd64,linux/arm64
           push: true
           tags: |
